<resources>
    <string name="app_name">EndicottParkingApp</string>
    <string name="endicott_parking">Endicott Parking</string>
    <string name="student_faculty_id">Student/Faculty ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="please_enter_the_following_information_to_register">Please enter the following information to register.</string>
    <string name="the_id_on_your_card">The ID on your card</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_college_email">Your college email</string>
    <string name="decal_type">Decal Type</string>
    <string name="home_building">Home Building</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="defaulthometext">DefaultHomeText</string>
    <string name="parking">Parking</string>
    <string name="logout">Logout</string>
    <string name="back_to_home_page">Back to Home Page</string>
    <string name="park">Park</string>
    <string name="defaultdistancetext">defaultDistanceText</string>
    <string name="defaultspotstext">defaultSpotsText</string>
    <string name="defaultparkingtext">defaultParkingText</string>
    <string name="map_to_parking_spot">Map to parking spot</string>
    <string name="welcome_to_options">Welcome to Options</string>
    <string name="decal">Decal</string>
    <string name="building">Building</string>
    <string name="email">Email</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="exit_without_saving">Exit Without Saving</string>
    <string-array name="buildings_array">
        <item>Bayview</item>
        <item>Standish</item>
        <item>Callahan</item>
        <item>LSB</item>
        <item>Hawthorn</item>
        <item>Library</item>
        <item>Marblehead-Stoneridge</item>
        <item>Mods</item>
        <item>Post</item>
        <item>Standish</item>
        <item>VPAC</item>
        <item>Beacon-Winthrop</item>
    </string-array>
    <string-array name="decals_array">
        <item>Student</item>
        <item>Faculty</item>
        <item>Commuter</item>
    </string-array>
</resources>
