<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/welcomeOptionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_to_options"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailOptionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeOptionsTextView" />

    <TextView
        android:id="@+id/decalOptionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/decal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailOptionsTextView" />

    <TextView
        android:id="@+id/buildingOptionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/building"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decalOptionsTextView" />

    <Button
        android:id="@+id/saveExitButton"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:onClick="saveUser"
        android:text="@string/save_and_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/exitButton"
        app:layout_constraintTop_toBottomOf="@+id/buildingOptionsSpinner" />

    <EditText
        android:id="@+id/emailOptionsEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toEndOf="@+id/emailOptionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/welcomeOptionsTextView" />

    <Spinner
        android:id="@+id/decalOptionsSpinner"
        android:layout_width="147dp"
        android:layout_height="33dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="20dp"
        android:entries="@array/decals_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/decalOptionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/emailOptionsEditText" />

    <Spinner
        android:id="@+id/buildingOptionsSpinner"
        android:layout_width="147dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:entries="@array/buildings_array"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toEndOf="@+id/buildingOptionsTextView"
        app:layout_constraintTop_toBottomOf="@+id/decalOptionsSpinner" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="174dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:onClick="exit"
        android:text="@string/exit_without_saving"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingOptionsTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>